# Nyanko-Scripts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rolling_release.yml
crates/bcc-apk/: Cargo.toml
crates/bcc-apk/src/: config.rs  keys.rs  main.rs  pem.rs
crates/bcc-apk/src/patch/: apk.rs  modify.rs  pack.rs  sign.rs
crates/bcc-pack/: Cargo.toml
crates/bcc-pack/src/: decrypt.rs  io.rs  keys.rs  main.rs  scanner.rs  workspace.rs
crates/neko-apk/: Cargo.toml  DEFAULT.md  README.md
crates/neko-apk/src/: config.rs  keys.rs  main.rs  pem.rs  workspace.rs
crates/neko-apk/src/patch/: apk.rs  libnative.rs  mod.rs  modify.rs  sign.rs
crates/neko-pack/: Cargo.toml  README.md
crates/neko-pack/src/: decrypt.rs  io.rs  keys.rs  main.rs
crates/nya-apk/: Cargo.toml  README.md
crates/nya-apk/src/: main.rs
crates/nya-pack/: Cargo.toml  README.md
crates/nya-pack/src/: main.rs
