[package]
name = "bcc-pack"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
nyanko = { version = "0.2.3", features = ["pack"] }
zip = "2.1"